--- a/src/companent/navfoot.scss
+++ b/src/companent/navfoot.scss
@@ -1,8 +1,10 @@
 .navbar{
     width: 100%;
+    padding: 1rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    font-size: 120%;
     .list{
         display: flex;
         align-items: center;
@@ -10,5 +12,9 @@
     }
     .favorit{
         display: flex;
+        input{
+            width: 5rem;
+            border: 0px;
+        }
     }
 }
