--- a/src/companent/navfoot.scss
+++ b/src/companent/navfoot.scss
@@ -1,11 +1,11 @@
-.navbar{
+.nnav{
     width: 100%;
     padding: 1rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     font-size: 120%;
-    .list{
+    .list1{
         display: flex;
         align-items: center;
         gap: 1rem;
